Adding qunit css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link href="assets/css/site.css" rel="stylesheet">
     <link href="assets/css/prettify.css" rel="stylesheet">
     {% if page.tests %}
+    <link href="libs/qunit/qunit.css" rel="stylesheet">
     <link href="assets/css/qunit.css" rel="stylesheet">
     {% endif %}
     <!--[if lte IE 7]>
