--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -65,3 +65,10 @@ footer {
 form .alert-success {
     visibility: hidden;
 }
+
+h5.method {
+    font-size: 16px;
+    border-bottom: 1px dotted #000;
+    display: inline-block;
+    line-height: 1.8;
+}
