--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,10 +69,13 @@
     <main>
         <div class="container">
             <div class="hero-unit">
-                <h1>
-                    <span aria-hidden="true" class="icon-checkbox-checked"></span>
-                    Validatr
-                </h1>
+                <div>
+                    <h1>
+                        <span aria-hidden="true" class="icon-checkbox-checked"></span>
+                        Validatr
+                    </h1>
+                    <h2> / {{ page.title }}</h2>
+                </div>
                 <p>Cross Browser HTML5 Form Validation.</p>
                 <p>
                     <a href="assets/validatr.zip" class="btn btn-large btn-primary">
