Removing old zip and changing path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
                 </div>
                 <p>Cross Browser HTML5 Form Validation.</p>
                 <p>
-                    <a href="assets/validatr.zip" class="btn btn-large btn-primary">
+                    <a href="release/validatr.zip" class="btn btn-large btn-primary">
                         Download
                         <span aria-hidden="true" class="icon-cloud-download"></span>
                     </a>
